going a different direction

--- a/index.html
+++ b/index.html
@@ -6,20 +6,17 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="./Assets/js/script.js"></script>
-    <h2 id="timer"></h2>
-    <div class="quizBox" id="quiz">
-        <div id="questions">
-            
-        </div id="answers">
-        <div>
-
+    <div id="quizBox">
+        <div id="timer"></div>
+        <div id="quizBox">
+            <h2 id="questions"></h2>
+            <p id="h2Footer"></p>
+            <ul id="answerEl">
+            </ul>
+            <button id="startBtn">Start Quiz</button>
         </div>
-
     </div>
-    <button type="button" id="startBtn">Start Quiz</button>
-    <button type="button" id="contBtn">Next Question</button>
-    <div id="score"></div>
     
+    <script src="./Assets/js/script.js"></script>
 </body>
 </html>
