struggling to make it all work

--- a/index.html
+++ b/index.html
@@ -3,16 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./Assets/css/style.css">
     <title>Document</title>
 </head>
 <body>
     <div id="quizBox">
         <div id="timer"></div>
+        <div id="score"></div>
         <div id="quizBox">
             <h2 id="questions"></h2>
             <p id="h2Footer"></p>
             <ul id="answerEl">
             </ul>
+            <div id="aResponse"></div>
             <button id="startBtn">Start Quiz</button>
         </div>
     </div>
